# BriskUI

./: .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
brisk_ui/: __init__.py  config.py  server.py
brisk_ui/api/: dependencies.py
brisk_ui/api/routes/: __init__.py  health.py  project.py
brisk_ui/services/: env_file.py  project_config.py
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  project.ts  status.ts  test.ts
frontend/src/app/: globals.css
frontend/src/features/algorithms/: page.tsx  types.ts
frontend/src/types/: index.ts
src/: App.jsx  App.tsx
src/app/: globals.css
src/components/: Home.jsx  Sidebar.jsx
src/components/Cross/: Cross.css  Cross.jsx  index.js
src/components/DeleteButton/: DeleteButton.css  DeleteButton.jsx  index.js
src/components/DeleteProjectModal/: DeleteProjectModal.css  DeleteProjectModal.jsx  index.js
src/components/EditProjectModal/: EditProjectModal.css  EditProjectModal.jsx  index.js
src/components/HiFiHome/: style.css
src/components/ProjectHeader/: ProjectHeader.jsx  index.js  style.css
src/components/Sidebar/: Sidebar.css  Sidebar.jsx
src/components/StatCard/: StatCard.jsx  index.js  style.css
src/components/icons/: index.js
src/contexts/: ModalContext.jsx
src/features/algorithms/: page.tsx
src/features/dashboard/: page.tsx
src/features/datasets/: page.tsx
src/features/experiments/: page.tsx
src/features/files/: page.tsx
src/features/metrics/: page.tsx
src/features/project/: page.tsx
src/features/results/: page.tsx
src/pages/HiFiDeleteProject/: HiFiDeleteProject.jsx  index.js  style.css
src/pages/HiFiEditProject/: HiFiEditProject.jsx  index.js  style.css
src/pages/HiFiHome/: HiFiHome.jsx  index.js  style.css
src/shared/components/: ProgressTracker.tsx
src/shared/stores/: useProjectModalStore.ts
src/styles/: Home.css  index.css  variables.css
src/types/: index.ts
tests/: conftest.py  test_edge_cases.py  test_file_reads.py  test_file_writes.py  test_preprocessors_and_settings.py  test_workflow_methods.py
(+145 files in other folders)
